--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		</title>
 		<link rel="stylesheet" href="css/style.css">
 		<link href="https://fonts.googleapis.com/css2?family=Tektur:wght@500&display=swap" rel="stylesheet">
-		<link rel="manifest", href="/manifest.json">
+		<link rel="manifest" href="manifest.json">
 	</head>
 	<body>
 	<div class="fon">
