--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 		<link rel="stylesheet" href="css/style.css">
 		<link href="https://fonts.googleapis.com/css2?family=Tektur:wght@500&display=swap" rel="stylesheet">
 		<link rel="manifest" href="manifest.json">
+		<script src="app.js"></script>
+    		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    		<meta name="theme-color" content="#317EFB">
 	</head>
 	<body>
 	<div class="fon">
