--- a/index.html
+++ b/index.html
@@ -19,25 +19,25 @@
 	<a name="honourable"><p id="text">Достопримечательности Уфы</p></a>
 	<div class="row">
 		<div class="block1">
-			<img src="img\honourable1.jpg">
+			<img src="img\honourable1.jpg" ALT="Памятник Салавату Юлаеву">
 			<a href="#honourable1">Памятник<br>Салавату Юлаеву</a>
 		</div>
 		<div class="block1">
-			<img src="img\honourable2.jpg">
+			<img src="img\honourable2.jpg" ALT="Мечеть Ляля-Тюльпан">
 			<a href="#honourable2">Мечеть<br>Ляля-Тюльпан</a>
 		</div>
 		<div class="block1">
-			<img src="img\honourable3.jpg">
+			<img src="img\honourable3.jpg" ALT="Центр города">
 			<a href="#honourable3">Центр города</a>
 		</div>
 		<div class="block1">
-			<img src="img\honourable4.jpg">
+			<img src="img\honourable4.jpg" ALT="Парк Победы">
 			<a href="#honourable4">Парк Победы</a>
 		</div>
 	</div>
 	<div class="coloumn">
 		<div class="block2">
-			<a name="honourable1"><img src="img\image1.png"></a>
+			<a name="honourable1"><img src="img\image1.png" ALT="Памятник Салавату Юлаеву"></a>
 			<div class="text">
 				<h1>Памятник Салавату Юлаеву</h1>
 				<p>Самый известный памятник города Уфы – это, безусловно,<br>памятник Салавату Юлаеву. Этот памятник<br>даже изображен на гербе республики Башкортостан.<br>
@@ -50,10 +50,10 @@
 				<p>Высота минаретов Ляля Тюльпан – 53 метра,<br>а их вершины в виде тюльпанов весят 34 тонны!<br>
 				Сегодня мечеть Ляля Тюльпан – главная кафедра<br>Верховного муфтия России Талгата Таджуддина<br>и Вторая Соборная мечеть Уфы.</p>
 			</div>
-			<a name="honourable2"><img src="img\image2.jpg"></a>
+			<a name="honourable2"><img src="img\image2.jpg" ALT="Мечеть Ляля-Тюльпан"></a>
 		</div>
 		<div class="block2">
-			<a name="honourable3"><img src="img\image3.jpg"></a>
+			<a name="honourable3"><img src="img\image3.jpg" ALT="Центр города"></a>
 			<div class="text">
 				<h1>Исторический центр города</h1>
 				<p>В данной части города много уникальных старинных<br>и красивых архитектурных объектов.<br>
@@ -66,7 +66,7 @@
 				<p>Парк Победы — мемориальный комплекс победы<br>в Великой Отечественной войне.<br>В парке представлена различная военная техника,<br>
 				есть мемориальные доски, памятники героям<br>и горит вечный огонь.</p>
 			</div>
-			<a name="honourable4"><img src="img\image4.jpg"></a>
+			<a name="honourable4"><img src="img\image4.jpg" ALT="Парк Победы"></a>
 		</div>
 	</div>
 	<form class="footer" autocomplete="off" action='feedback.php' method='post'>
